fix admin  issue

--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -19,7 +19,7 @@
         <article>
             {% if response %}
             <h1 style="color: blue;">{{response.title}}</h1>
-            <p>Published {{response.date_time}} by {{user.username}}</p>
+            <p>Published {{response.date_time}} by  admin <p>
             <br>
             <p>{{response.description}}</p> 
             <br> <br>
