--- a/templates/blog-detail.html
+++ b/templates/blog-detail.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Notes on Duke Ellington - My Blog</title>
-    <!-- Link to CSS stylesheet -->
-</head>
+{% extends 'base.html' %}
+
+{% block content %}
+
+{% load static %}
 <body>
     <header>
       
@@ -65,4 +64,4 @@
 </body>
 
 
-</html>
+{% endblock %}
