chnage url comapnion

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -25,11 +25,11 @@
         .use(Dashboard, { trigger: '#uppyModalOpener' })
         .use(Instagram, {
           target: Dashboard,
-          companionUrl: 'http://localhost:3020',
+          companionUrl: 'https://compainion.shubpy.com/',
         })
         .use(GoogleDrive, {
           target: Dashboard,
-          companionUrl: 'http://localhost:3020',
+          companionUrl: 'https://compainion.shubpy.com/',
         })
         .use(Tus, { endpoint: 'https://tusd.tusdemo.net/files/' })
 
